# kijijiscraper

./: .gitignore  CMakeLists.txt  README.md  output.csv  runit.bat  spider.c  spiderlastread.txt
curl-7.70.0/include/curl/: CMakeLists.txt
parser/: CarInfo.java  Parser.java  dumpfolder.txt  parser.py
scraper/: .gitignore  lastread.txt  output.csv  parselisting.py  spider.py
spider/: lastread.txt  spider.py
